# jwks-client

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
examples/: decode.rs  deserialize.rs  error_handling.rs  simple.rs  usage.rs
src/: demo.rs  error.rs  jwks.rs  jwt.rs  keyset.rs  lib.rs
test/: jwt.json  private.pem  public.en  public.key  public.pem  test-certificate.crt  test-jwks.json  token.txt
