[package]
name = "jwks-client"
version = "0.1.8"
authors = ["Jean-François Bilodeau <jfbilodeau@chronogears.com>"]
edition = "2018"
keywords = [ "jwt", "jwks", "jwk", "gcp" ]
categories = [ "web-programming", "cryptography", "authentication" ]
license = "MIT"
homepage = "https://github.com/jfbilodeau/jwks-client"
repository = "https://github.com/jfbilodeau/jwks-client"
description = "Library to validate JWT tokens using JSON Web Key Set (JWKS)"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.10.0"
reqwest = "^0.9.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
regex = "1"
ring = "^0.16.0"